@@ -1,3 +1,3 @@
 ; This file was automatically generated by ScriptHubImporter.py
-global g_ImportsGameVersion64 = 466
+global g_ImportsGameVersion64 = 467
 global g_ImportsGameVersionPostFix64 = ""
