@@ -98,7 +98,7 @@ this.game.gameInstances.ActiveCampaignData.currentAreaID := New GameObjectStruct
 this.game.gameInstances.ActiveCampaignData.highestAvailableAreaID := New GameObjectStructure(this.game.gameInstances.ActiveCampaignData,"Int", [0x90])
 this.game.gameInstances.ActiveCampaignData.gold := New GameObjectStructure(this.game.gameInstances.ActiveCampaignData,"Quad", [0x258])
 this.game.gameInstances.FormationSaveHandler := New GameObjectStructure(this.game.gameInstances,"Int", [0x60])
-this.game.gameInstances.FormationSaveHandler.formationCampaignID := New GameObjectStructure(this.game.gameInstances.FormationSaveHandler,"Int", [0x80])
+this.game.gameInstances.FormationSaveHandler.formationCampaignID := New GameObjectStructure(this.game.gameInstances.FormationSaveHandler,"Int", [0x78])
 this.game.gameInstances.FormationSaveHandler.formationSavesV2 := New GameObjectStructure(this.game.gameInstances.FormationSaveHandler,"List", [0x30])
 this.game.gameInstances.FormationSaveHandler.formationSavesV2.Favorite := New GameObjectStructure(this.game.gameInstances.FormationSaveHandler.formationSavesV2,"Int", [0x40])
 this.game.gameInstances.FormationSaveHandler.formationSavesV2.SaveID := New GameObjectStructure(this.game.gameInstances.FormationSaveHandler.formationSavesV2,"Int", [0x38])
