@@ -1,3 +1,7 @@
+September 3, 2022
+    Updated Imports for v467.
+    Added pointers for CNE Stand Alone v467. Note: Mini-Blessings addon requires removing EGS overlay dlls from the game's plugins folder to function. (EOS DLls)
+
 September 1, 2022
     Added extra icon checks for the Gem Farm Script to handle Windows 7 and Wine better.
     Added settings to save current inventory window checkbox selections between sessions.
